# light-sensor

arduino/main/: main.ino
edge_controller/: README.md  dockerfile  lightsensor.service  main.py  pyproject.toml  rh.py  setup.sh  simulate.py  sub.py
web_app/: package-lock.json  package.json
web_app/src/store/: index.js
web_app/src/views/: Home.vue
